# DnDCS

./: .gitattributes  .gitignore  AGENTS.md  README.md  first_program.py  install.bat  install.sh  pyproject.toml  run.bat  run.sh  sitecustomize.py
.github/workflows/: tests.yml
characters/: aella_storm.json
dndcs/: __init__.py  cli.py
dndcs/core/: discovery.py  loader.py  models.py  module_base.py  registry.py
dndcs/modules/: __init__.py
dndcs/modules/fivee_stock/: __init__.py
dndcs/ui/: __init__.py  server.py
main-Core/dndcs_core/: __init__.py
main-Core/dndcs_core/domain/: __init__.py  models.py
main-Core/dndcs_core/services/: __init__.py  discovery.py  registry.py
main-Core/rulesets/dndcs_rulesets/: __init__.py
main-Core/rulesets/dndcs_rulesets/fivee_stock/: __init__.py  module.py
main-Core/rulesets/dndcs_rulesets/fivee_stock/classes/: __init__.py
main-Core/rulesets/dndcs_rulesets/fivee_stock/companions/: basic.py
main-Core/rulesets/dndcs_rulesets/fivee_stock/feats/: basic.py
mods/test1mod/: main.py  manifest.yaml
mods/test1mod/feats/: sample.py
mods/test1mod/items/: sample.py
mods/test1mod/spells/: sample.py
modules/fivee/: manifest.yaml
profiles/: default.yaml
src/dndcs/: __init__.py  cli.py  logger.py
src/dndcs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dndcs/core/: __init__.py  discovery.py  loader.py  models.py  module_base.py  registry.py
src/dndcs/modules/fivee_stock/: manifest.yaml  module.py
src/dndcs/modules/fivee_stock/classes/: basic.py
src/dndcs/modules/fivee_stock/feats/: example.py
src/dndcs/modules/fivee_stock/items/: basic.py
src/dndcs/modules/fivee_stock/spells/: example.py
src/dndcs/ui/: server.py
src/dndcs/ui/static/: app.js  index.html  styles.css
src/dndcs/ui/static/js/: app.js  main.js
src/dndcs/ui/static/js/components/: summary.js  tabs.js
src/dndcs/ui/static/js/panels/: items.js  overview.js  raw.js
src/dndcs/ui/static/js/state/: store.js
src/dndcs/ui/static/js/util/: abilities.js  slug.js  toast.js
tests/: conftest.py  test_class_features.py  test_companions.py  test_discovery.py  test_feats.py  test_item_ac.py  test_item_saves.py  test_loader.py  test_registry_default_module_id.py  test_spell_slots.py  test_spellcasting.py  test_ui_character.py  test_ui_spells.py
tests/data/: wizard_l17.json
tests/manual/: spellbook_display.md
webui/: __init__.py  server.py
webui/static/: styles.css
webui/static/js/: main.js
webui/static/js/components/: toast.js
webui/static/js/features/: storage.js
webui/static/js/panels/: abilities.js  feats.js  notes.js
webui/static/js/panels/spells/: book.js  index.js
webui/static/js/services/: api.js
webui/static/js/state/: store.js
webui/static/js/util/: deepCopy.js  dom.js  logging.js
