[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dndcs"
version = "0.1.0"
description = "Modular backend for DnD character sheets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1", "pydantic>=2.6", "PyYAML>=6.0"]

[project.optional-dependencies]
ui = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "coverage>=7.5",
  "black>=24.4",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
dndcs = "dndcs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dndcs", "dndcs.*"]

[tool.setuptools.package-data]
# Keys must be real package names (e.g., "dndcs"), not globs.
# Paths are relative to the package directory (src/dndcs).
"dndcs" = [
  "ui/static/**/*",
  "modules/**/manifest.yaml",
  "modules/**/assets/**/*"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
